13th November Angular edition1

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,17 +1,17 @@
 
-<div>
+<div class="text-center">
 <h1>About Us</h1>
 </div>
-<div class="text-center">
+<div class="text-center" style="width:50%;margin:auto;">
 <p>
   Founded in 2022, GrabYourRide has pioneered car sharing across emerging markets. 
   With its asset-light marketplace-focused business model, 
   the GrabYourRide platform connects host vehicle owners with guests who choose from a 
   selection of otherwise idle cars to use for personal, business and travel needs. 
-  With operations across India GrabYourRide is transforming the 
+  With operations across Delhi GrabYourRide is transforming the 
   urban mobility landscape with the introduction of affordable, 
   sustainable and convenient transportation solutions. GrabYourRide 
-  currently operates across more than 50 cities in India and plans to
+  currently operates across Delhi and plans to
    continue building smart, convenient and sustainable transport solutions
     for emerging market consumers.
 </p>
