--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,3 +1,9 @@
+
+<div  class="text-center">
+<h2>Contact Us:</h2>
+</div>
+<div class="text-center" style="margin-left:33%;">
+ 
 <div _ngcontent-oql-c34="" class="col col-md-6 col-12">
   <div _ngcontent-oql-c34="" class="card">
     <div _ngcontent-oql-c34="" class="card-header"> 1. Send us an email: </div>
@@ -12,7 +18,8 @@
   </div>
   <div _ngcontent-oql-c34="" class="card">
     <div _ngcontent-oql-c34="" class="card-header"> 3. Send mail to this address </div>
-    <div _ngcontent-oql-c34="" class="card-block"><p _ngcontent-oql-c34="" class="contactUs"><span _ngcontent-oql-c34="" class="contactUsLink">GrabYourRide</span><br _ngcontent-oql-c34=""><span _ngcontent-oql-c34="" class="contactUs">2nd, 3rd block &amp; Gaur City </span><br _ngcontent-oql-c34="">Greater Noida</p>
+    <div _ngcontent-oql-c34="" class="card-block"><p _ngcontent-oql-c34="" class="contactUs"><span _ngcontent-oql-c34="" class="contactUsLink">GrabYourRide</span><br _ngcontent-oql-c34=""><span _ngcontent-oql-c34="" class="contactUs">2nd, 3rd block , Gaur City </span><br _ngcontent-oql-c34="">Greater Noida</p>
     </div>
   </div>
+</div>
 </div>
