13th Nov Edition 2

--- a/src/app/admin-access-area/admin-access-area.component.html
+++ b/src/app/admin-access-area/admin-access-area.component.html
@@ -116,7 +116,23 @@
       <div class="card-body">
         <h5 class="card-title">View Periodic Revenue</h5>
         <p class="card-text">View Revenue on the basis of dates</p>
-        <a (click)="monthly()" class="btn btn-dark">Add</a>
+        <a (click)="monthly()" class="btn btn-dark">View</a>
+      </div>
+    </div>
+    <div class="card col-4 ms-5" style="margin:4% ;">
+      <h5 class="card-header">Customers</h5>
+      <div class="card-body">
+        <h5 class="card-title">View All Customers</h5>
+        <p class="card-text">View All Customers Registered in our Database.</p>
+        <a (click)="viewCustomers()" class="btn btn-dark">view</a>
+      </div>
+    </div>
+    <div class="card col-4 ms-5" style="margin:4% ;">
+      <h5 class="card-header">Bookings</h5>
+      <div class="card-body">
+        <h5 class="card-title">View Bookings By Vehicle</h5>
+        <p class="card-text">View All Bookings on the basis of vehicle types</p>
+        <a (click)="monthly()" class="btn btn-dark">View</a>
       </div>
     </div>
     
