Nov 13 Angular Edition 3

--- a/src/app/admin-access-area/admin-access-area.component.html
+++ b/src/app/admin-access-area/admin-access-area.component.html
@@ -132,7 +132,7 @@
       <div class="card-body">
         <h5 class="card-title">View Bookings By Vehicle</h5>
         <p class="card-text">View All Bookings on the basis of vehicle types</p>
-        <a (click)="monthly()" class="btn btn-dark">View</a>
+        <a (click)="viewBookingByVehicle()" class="btn btn-dark">View</a>
       </div>
     </div>
     
