--- a/src/app/after-payment/after-payment.component.html
+++ b/src/app/after-payment/after-payment.component.html
@@ -1,5 +1,6 @@
-<div>
+<div class="text-center" style="margin-top:15%;">
   <h1>Payment Successful!</h1>
+  <br>
   <h3>Booking will be confirmed shortly!</h3>
-  <button (click)="home()">Home</button>
+  <button class="btn btn-success" (click)="home()">Home</button>
 </div>
