--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,7 +1,6 @@
 <body>
-  <div class="form-floating">
-    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
-    <label for="floatingTextarea">Enter Feedback</label>
-    <button type="btn-btn-dark">Submit</button>
+  <div class="text-center">
+    <h3>Send Your Valuable Feedback To:</h3>
+    <h5>grabyourrideg5@gmail.com</h5>
   </div>
 </body>
