--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -7,7 +7,7 @@
 <div _ngcontent-oql-c34="" class="col col-md-6 col-12">
   <div _ngcontent-oql-c34="" class="card">
     <div _ngcontent-oql-c34="" class="card-header"> 1. Send us an email: </div>
-    <div _ngcontent-oql-c34="" class="card-block"><p _ngcontent-oql-c34="" class="contactUs"> If you are facing any issue/ or for feedback, write to us at <br _ngcontent-oql-c34=""><a _ngcontent-oql-c34="" class="contactUsLink" href="grabyourride@gmail.com">
+    <div _ngcontent-oql-c34="" class="card-block"><p _ngcontent-oql-c34="" class="contactUs"> If you are facing any issue/ or for feedback, write to us at <br _ngcontent-oql-c34=""><a _ngcontent-oql-c34="" class="contactUsLink" href="grabyourrideg5@gmail.com">
       <span _ngcontent-oql-c34="" class="contactUsLink">grabyourride@gmail.com</span></a></p>
     </div>
   </div>
