--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -22,6 +22,7 @@
   <button (click)="customerRegistration()" class="btn btn-dark">Sign Up</button>
 </div> -->
 <div class="text-center" style="width:20% ;margin:auto;">
+  <form #newuserForm="ngForm" (ngSubmit)="onSubmit(newuserForm.value)" novalidate>
   <table class="table table-striped table-bordered">
     <thead>
       <th>Enter the Details</th>
@@ -34,8 +35,6 @@
           
           
         </div>
-        <!--<td>User Email</td>-  "^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$"
-        <td><input type="email" name="" id="" [(ngModel)]="user.userId" required ng-pattern="/^([\w-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/" /></td>-->
       </tr>
       <tr>
         <div class="form-group" [class.has-error]="password.invalid && password.touched">
@@ -47,17 +46,14 @@
         <!--<td>User Password</td>
         <td><input type="password" name="" id="" [(ngModel)]="user.password"></td>-->
       </tr>
-      <tr>
-        <div class="form-group" [class.has-error]="Confirmpassword.invalid && Confirmpassword.touched">
-          <td><label for="Confirmpassword" class="control-label">Confirm Password</label></td><br>
-          <td><input id="Confirmpassword" required pattern="^(?=.*[0-9])+(?=.*[a-zA-Z])+(?=.*[@#$%^&-+=()]).{8,}$" type="password" class="form-control" name="Confirmpassword" [(ngModel)]="user.Confirmpassword" #Confirmpassword="ngModel"> <span class="help-block" *ngIf="Confirmpassword.errors?.required && Confirmpassword.touched"style="color:red;">Confirm password is required</span> <span class="help-block" *ngIf="Confirmpassword.errors?.pattern && Confirmpassword.touched"style="color:red;">Confirm password is Invalid</span></td>
-         
-         
-        </div>
-      </tr>
-      
     </tbody>
   </table>
-  <button (click)="customerRegistration()" class="btn btn-dark">Sign Up</button>
+  
+  <button [disabled]="!newuserForm.form.valid" type="submit" (click)="customerRegistration()" class="btn btn-dark">Sign Up</button>
+</form>
+  <h4 style="color: red; width: 100%; margin: auto;" class="text-center">{{Invalid}}</h4>
+  <br>
+  <p>Already a user?</p>
+  <button (click)="goToLogin()" style="margin: 2%;" class="text-center btn btn-dark">Login</button>
 </div>
 
