--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<head>
+<!-- <head>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <div class="text-center">
@@ -7,12 +7,7 @@
   <h3>Enter the Details</h3>
     <table class="text-bordered table">
       <tr>
-        <!-- customer:number; -->
-  <!-- // firstName:string;
-  // lastName:string;
-  // emailId:string;
-  // mobileNumber:string;
-  // address:string; -->
+
         <td>First Name</td>
         <td><input type="text" required name="" id="" [(ngModel)]="customer.firstName"></td>
       </tr>
@@ -34,4 +29,69 @@
       </tr>
     </table>
     <button type="submit" class="btn btn-success" (click)="register()">Register</button>
+</div> -->
+
+<head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+</head>
+<form #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)" novalidate>
+<div class="text-center" style="width:40%;margin:auto;">
+  <h1>Welcome to the registration page!</h1><br>
+  <h3>Enter the Details</h3>
+    <table class=" table table-bordered">
+      <tr>
+        <td><label for="firstName" class="control-label">First Name</label></td>
+        <div class="form-group" [class.has-error]="firstName.invalid && firstName.touched">
+         
+          <td><input id="firstName" required type="text" class="form-control" name="firstName" [(ngModel)]="customer.firstName" #firstName="ngModel"><span class="help-block" *ngIf="firstName.invalid && firstName.touched" style="color:red;">
+            First Name is required
+            </span></td>
+          
+        </div>
+        <!--<td>First Name</td>
+        <td><input type="text" required name="" id="" [(ngModel)]="customer.firstName"></td>-->
+      </tr>
+      <tr>
+        <td><label for="lastName" class="control-label">Last Name</label></td>
+        <div class="form-group" [class.has-error]="lastName.invalid && lastName.touched">
+          
+          <td><input id="lastName" required type="text" class="form-control" name="lastName" [(ngModel)]="customer.lastName" #lastName="ngModel"><span class="help-block" *ngIf="lastName.invalid && lastName.touched" style="color:red;">
+            Last Name is required
+            </span></td>
+          
+        </div>
+        <!--<td>Last Name</td>
+        <td><input  type="text" required name="" id="" [(ngModel)]="customer.lastName"></td>-->
+      </tr>
+      <tr>
+        <td>Email Id</td>
+        <td>{{email}}</td>
+      </tr>
+      <tr>
+        <td><label for="number" class="control-label">Mobile Number</label></td>
+        <div class="form-group" [class.has-error]="number.invalid && number.touched">
+         
+          <td><input id="number" required pattern="[1-9]{1}[0-9]{9}" type="number" class="form-control" name="number" [(ngModel)]="customer.mobileNumber" #number="ngModel"><span class="help-block" *ngIf="number.errors?.required && number.touched" style="color:red;">
+            Mobile Number is required
+            </span><span class="help-block" *ngIf="number.errors?.pattern && number.touched" style="color:red;">Mobile Number is Invalid</span></td>
+          
+          
+        </div>
+        <!--<td>Mobile Number</td>
+        <td><input type="number" name="" id="" [(ngModel)]="customer.mobileNumber"></td>-->
+      </tr>
+      <tr>
+        <td><label for="address" class="control-label">Address</label></td>
+        <div class="form-group" [class.has-error]="addressControl.invalid && addressControl.touched">
+       
+          <td><input id="address" required type="text" class="form-control" name="address" [(ngModel)]="customer.address" #addressControl="ngModel"> <span class="help-block" *ngIf="addressControl.invalid && addressControl.touched" style="color:red;">
+            Address is required
+            </span></td>
+         
+        </div>
+      </tr>
+    </table>
+    <button [disabled]="!userForm.form.valid" type="submit" class="btn btn-success" (click)="register()">Register</button>
 </div>
+</form>
+     
