--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -33,7 +33,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Enter UPI Details</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Enter UPI Number</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
         </button>
       </div>
