--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,9 +1,9 @@
-
+<div>
 <div class="text-center">
-<h1>About Us</h1>
+<h1 style="color:#DCD6F7 ;">About Us</h1>
 </div>
 <div class="text-center" style="width:50%;margin:auto;">
-<p>
+<p style="color:white ;">
   Founded in 2022, GrabYourRide has pioneered car sharing across emerging markets. 
   With its asset-light marketplace-focused business model, 
   the GrabYourRide platform connects host vehicle owners with guests who choose from a 
@@ -15,6 +15,32 @@
    continue building smart, convenient and sustainable transport solutions
     for emerging market consumers.
 </p>
+</div>
+<br>
+<br>
+<div class="row">
+<div class="col-4">
+  <img src="../../assets/Devanshu.jpeg"  alt="...">
+  <h4>Devanshu Kumar</h4>
+</div>
+<div class="col-4">
+  <img src="../../assets/Satvik.jpeg" alt="...">
+  <h4>Saatvik Trivedi</h4>
+</div>
+<div class="col-4">
+  <img src="../../assets/mayankPic.jfif"  alt="...">
+  <h4>Mayank Patel</h4>
+</div>
+<div class="col-4" style="display:inline-block;">
+  <img src="../../assets/nav.jpeg"  alt="...">
+  <h4>Navaneetha Enjam</h4>
+</div>
+<div class="col-4">
+    
+  <img src="../../assets/Ashwini.jpeg"  alt="...">
+  <h4>Ashwini Singh</h4>
+</div>
+</div>
 </div>
 
 
