--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -40,3 +40,16 @@ button{
     margin: auto;
     color: azure;
 }
+
+form{
+    background-color: #EEEEEE;
+}
+.target{
+    background-color: #EEEEEE;
+}
+div{
+    background-attachment: #EEEEEE;
+}
+label{
+    background-color: #EEEEEE;
+}
