--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,8 +16,9 @@
     </script>  
     </head>  
     <body>  
-    <div class = "container mt-2" style = "border:2px solid black;">  
-    <h5> Login Page </h5>  
+        <br><br><br><br>
+    <div  class = "target container mt-2" style = "background-color: #EEEEEE;border:2px solid black;">  
+    <h5 > Login Page </h5>  
     <form action = " " class = "was-validated">  
     <div class = "emailid">  
     <label for = "emid" class = "form-label">Email Id:</label>  
@@ -34,12 +35,12 @@
     <button type = "submit" class = "btn btn-info mt-2" (click)="onSubmit()"> Submit </button><br><br> 
     <button class="btn btn-success" (click)="forgotPassword()">Forgot Password</button> 
     </form>  
-       
     </div> 
     <div class="text-center">
         <p style="color:red;">{{message}}</p>
     </div> 
-    </body>  
+    </body> 
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br> 
     </html>  
 <body>
     
