--- a/src/app/new-booking/new-booking.component.html
+++ b/src/app/new-booking/new-booking.component.html
@@ -68,6 +68,9 @@
     <button class="btn btn-success" (click)="proceedToPayment()" [disabled]="buttonStatus">Proceed to Payment</button>
   </div>
 </div>
+<div class="text-center">
+  <h4 style="color:red;">{{errorMsg}}</h4>
+</div>
 </html>
 
 
