--- a/src/app/payment-details/payment-details.component.html
+++ b/src/app/payment-details/payment-details.component.html
@@ -6,6 +6,7 @@
         <th>Payment Id</th>
         <th>Payment Mode</th>
         <th>Date</th>
+        <th>Payment Amount</th>
         <th>Update Status</th>
         <th>Status</th>
        </tr>
@@ -15,6 +16,7 @@
             <td class="text-center">{{p.paymentId}}</td>
             <td class="text-center">{{p.paymentMode}}</td>
             <td class="text-center">{{p.paymentDate}}</td>
+            <td class="text-center">{{p.booking.totalCost}}</td>
             <td class="text-center"><button class="btn btn-success" (click)="paymentStatus(p,'Successful')"><i class="fa-solid fa-check"></i></button><button (click)="paymentStatus(p,'Failed')" class="btn btn-danger"><i class="fa-solid fa-xmark"></i></button></td>
             <td class="text-center">{{p.paymentStatus}}</td>
         </tr>
