--- a/src/app/terms/terms.component.html
+++ b/src/app/terms/terms.component.html
@@ -1,5 +1,7 @@
+<div style="width:40% ;margin:auto;">
 <h5 _ngcontent-oso-c32="" class="heading"> Cancellation and Returns </h5>
 <p _ngcontent-oso-c32="" class="terms_content"> You may cancel the booking 24 hour prior to the time of journey, without any cancellation charges for all services. In case cancellation or shorting of the trip is requested within 24 hours of the pick-up time, then following rules will apply: </p>
 <ol _ngcontent-oso-c32="" class="terms_content"><li _ngcontent-oso-c32="">Multi Day trip: The charge for the first day would be deducted from the total amount and refund will be issued to the user.</li><li _ngcontent-oso-c32="">Single Day trip/ Airport transfer: No Refund will be issued to the user.</li><li _ngcontent-oso-c32="">Airport transfer: No Cancellation Charges if Cancelled at least 2 hours prior of pickup time.</li></ol>
 <h5 _ngcontent-oso-c32="" class="heading"> Refunds </h5>
 <p _ngcontent-oso-c32="" class="terms_content"> If you are eligible for refunds based on the “Cancellation and Returns” policy above, then the refund will be remitted back to you in 5-7 working days. In case of any issues, write to us at grabyourrideg5@gmail.com or call us at 90 4545 00080 </p>
+</div>
