--- a/src/app/view-booking/view-booking.component.html
+++ b/src/app/view-booking/view-booking.component.html
@@ -30,6 +30,9 @@
     </table>
     <button class="btn btn-success" (click)="goBack()">Go Back</button>
 </div>
+<div class="text-center">
+    <h3 style="color:red;">{{errormsg}}</h3>
+</div>
 
 <!-- <tbody class="tbody">
     <tr *ngFor="let d of ProductList">
