--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,6 +1,8 @@
+<body>
+  
 
 <div  class="text-center">
-<h2>Contact Us:</h2>
+<h2 style="color:#E3FDFD ;">Contact Us:</h2>
 </div>
 <div class="text-center" style="margin-left:33%;">
  
@@ -8,7 +10,7 @@
   <div _ngcontent-oql-c34="" class="card">
     <div _ngcontent-oql-c34="" class="card-header"> 1. Send us an email: </div>
     <div _ngcontent-oql-c34="" class="card-block"><p _ngcontent-oql-c34="" class="contactUs"> If you are facing any issue/ or for feedback, write to us at <br _ngcontent-oql-c34=""><a _ngcontent-oql-c34="" class="contactUsLink" href="grabyourrideg5@gmail.com">
-      <span _ngcontent-oql-c34="" class="contactUsLink">grabyourride@gmail.com</span></a></p>
+      <span _ngcontent-oql-c34="" class="contactUsLink">grabyourrideg5@gmail.com</span></a></p>
     </div>
   </div>
   <div _ngcontent-oql-c34="" class="card">
@@ -23,3 +25,5 @@
   </div>
 </div>
 </div>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+</body>
