--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -21,8 +21,10 @@
   </table>
   <button (click)="customerRegistration()" class="btn btn-dark">Sign Up</button>
 </div> -->
+<div >
+  <br><br>
 <div class="text-center" style="width:20% ;margin:auto;">
-  <form #newuserForm="ngForm" (ngSubmit)="onSubmit(newuserForm.value)" novalidate>
+  <form class="total" #newuserForm="ngForm" (ngSubmit)="onSubmit(newuserForm.value)" novalidate>
   <table class="table table-striped table-bordered">
     <thead>
       <th>Enter the Details</th>
@@ -48,12 +50,13 @@
       </tr>
     </tbody>
   </table>
-  
+
   <button [disabled]="!newuserForm.form.valid" type="submit" (click)="customerRegistration()" class="btn btn-dark">Sign Up</button>
 </form>
   <h4 style="color: red; width: 100%; margin: auto;" class="text-center">{{Invalid}}</h4>
   <br>
   <p>Already a user?</p>
   <button (click)="goToLogin()" style="margin: 2%;" class="text-center btn btn-dark">Login</button>
+</div>
 </div>
 
